# mattermost-slint

./: Cargo.toml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/mattermost/: Cargo.toml  build.rs
crates/mattermost/src/: common.rs  lib.rs  main.rs  services.rs  viewmodels.rs
crates/mattermost/src/services/: events.rs  mod.rs  nav.rs  web.rs
crates/mattermost/src/services/web/: api.rs  service.rs  types.rs
crates/mattermost/src/viewmodels/: loginpage.rs  mod.rs
crates/mattermost/ui/: main.slint  store.slint
crates/mattermost/ui/components/: brand-avatar.slint  input-field.slint  primary-button.slint
crates/mattermost/ui/pages/: login-page.slint
crates/mattermost/ui/popups/: loading-popup.slint  messagebox-popup.slint
crates/photo-viewer/: Cargo.toml  README.md  build.rs
crates/photo-viewer/src/: bridge.rs  constants.rs  error.rs  lib.rs  main.rs  router.rs
crates/photo-viewer/src/models/: mod.rs  viewport.rs  virtual_grid.rs  virtual_item.rs
crates/photo-viewer/src/services/: container.rs  mod.rs  photos.rs  traits.rs
crates/photo-viewer/src/services/impls/: filesystem.rs  image_service.rs  mod.rs
crates/photo-viewer/src/state/: actions.rs  mod.rs
crates/photo-viewer/src/viewmodels/: grid_page.rs  import_page.rs  loupe_page.rs  mod.rs  welcome_page.rs
crates/photo-viewer/ui/: main.slint  store.slint
crates/photo-viewer/ui/pages/: grid.slint  import.slint  loupe.slint  welcome.slint
