[package]
name = "mattermost"
version = "0.1.0"
edition = "2024"
authors = ["Jaysmito Mukherjee <jaysmito101@gmail.com>"]

[dependencies]
env_logger.workspace = true
flume.workspace = true
log.workspace = true
macros.workspace = true
slint.workspace = true
thiserror.workspace = true
tokio.workspace = true

[build-dependencies]
slint-build.workspace = true
