[package]
name = "photo-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Mattermost Team"]

[[bin]]
name = "photo-viewer"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
parking_lot.workspace = true
slint.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Photo-specific dependencies
image = "0.25"
walkdir = "2.5"
rfd = "0.15"

[build-dependencies]
slint-build.workspace = true

